--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ol>
                 <li>L’insertion professionnel ;</li>
                 <li>L’acquisition des compétences ;</li>
-                <li>L’impact social.</li>
+                <li><em>l’impact social.</em></li>
             </ol>
 
         <h2>Pédagogie active</h2>
@@ -108,16 +108,16 @@
             </tbody>
         </table>
         <h2>Notre adresse</h2>
-        <p>
-            <strong>Kinshasa Digital</strong><br>
-            <strong>Digital Campus</strong>
-            <strong>Concession COTEX</strong> (<strong>Référence</strong>: en face de l’Ambassade de France)<br>
-            <strong>N&deg; 63 Avenue Colonel Mondjiba</strong><br>
-            Commune de Ngaliema - Kinshasa<br>
-            République Démocratique du Congo<br>
-            <strong>info@kinshasadigital.com</strong><br>
-            <strong>+243 891 341 236</strong><br>
-            Copyright &COPY; <strong>Kinshasa Digital</strong>
-        </p>
+        <address>
+                <strong>Kinshasa Digital</strong><br>
+                <strong>Digital Campus</strong>
+                <strong>Concession COTEX</strong> (<strong>Référence</strong>: en face de l’Ambassade de France)<br>
+                <strong>N&deg; 63 Avenue Colonel Mondjiba</strong><br>
+                Commune de Ngaliema - Kinshasa<br>
+                République Démocratique du Congo<br>
+                <strong>info@kinshasadigital.com</strong><br>
+                <strong>+243 891 341 236</strong><br>
+                Copyright &COPY; <strong>Kinshasa Digital</strong>
+        </address>
     </body>
 </html>
